--- a/RekeningrijdersApplicatie/src/assets/css/styles.css
+++ b/RekeningrijdersApplicatie/src/assets/css/styles.css
@@ -1,4 +1,11 @@
+body {
+    background-color: lightgray;
+    /* background-image: url("../images/warschau.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed; */
+}
+
 .shadow {
     border-radius: 5px;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)!important;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)!important;
 }
