--- a/RekeningrijdersApplicatie/src/app/car-list/car-list.component.css
+++ b/RekeningrijdersApplicatie/src/app/car-list/car-list.component.css
@@ -1,7 +1,3 @@
-.row {
-    padding: 5px 5px 5px 5px
-}
-
 .container {
     background: white;
     margin-bottom: 5px;
@@ -9,4 +5,8 @@
 
 .table-container {    
     background: white;
+}
+
+.car {
+    cursor: pointer;
 }
