--- a/RekeningrijdersApplicatie/src/app/invoice/invoice.component.html
+++ b/RekeningrijdersApplicatie/src/app/invoice/invoice.component.html
@@ -1,8 +1,25 @@
 <div class="container shadow">
-    <h2>Invoice</h2>
+    <h2>Invoice: {{invoice.dateToString()}}</h2>
 </div>
 <div class="container shadow">
-    <div class="row">
-        <h3>{{invoice.id}}</h3>
-    </div>
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Date Start</th>
+                <th scope="col">Date End</th>
+                <th scope="col">Location Start</th>
+                <th scope="col">Location End</th>
+                <th scope="col">Car</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let movement of invoice.movements">
+                <td>{{dateToString(movement.startDate)}}</td>
+                <td>{{dateToString(movement.endDate)}}</td>
+                <td>{{movement.startLocation.latitude}}, {{movement.startLocation.longitude}}</td>
+                <td>{{movement.endLocation.latitude}}, {{movement.endLocation.longitude}}</td>
+                <td>{{movement.car.licensePlate}}</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
