--- a/RekeningrijdersApplicatie/src/app/user/user.component.html
+++ b/RekeningrijdersApplicatie/src/app/user/user.component.html
@@ -10,4 +10,8 @@
         <span class="fas fa-envelope"></span>
         {{user.email}}
     </div>
+    <div class="row">
+        <span class="fas fa-home"></span>
+        {{user.address}}
+    </div>
 </div>
