--- a/RekeningrijdersApplicatie/src/app/header/header.component.html
+++ b/RekeningrijdersApplicatie/src/app/header/header.component.html
@@ -1,20 +1,14 @@
 <div class="container shadow">
     <div class="row" style="display: flex">
         <div class="col">
-            <a href="/"><h1>Rekeningrijder</h1></a>
+            <a href="/"><h1>InvoiceDriver</h1></a>
         </div>
-        <!-- <div class="col-3 header-item">
-            <app-search style="float: right"></app-search>
-        </div> -->
-        <!-- <div *ngIf="session.getUserId() !== null" class="col-1 header-item">
-                <a href="/profile/{{session.getUserId()}}"><button *ngIf="session.getUserId() !== null" class="btn btn-outline-primary" style="float:right">Profile</button></a>
-        </div> -->
         <div class="col header-item">
             <button id="closeLoginModal" [hidden]="true" data-toggle="modal" data-target="#loginModal"></button>
-            <button class="btn btn-outline-primary" style="float:right" data-toggle="modal" data-target="#loginModal">Login</button>
+            <button *ngIf="session.getItem('userId') === null" class="btn btn-outline-primary" style="float:right" data-toggle="modal" data-target="#loginModal">Login</button>
             <button id="closeRegisterModal" [hidden]="true" data-toggle="modal" data-target="#registerModal"></button>
-            <button class="btn btn-outline-primary" style="float:right; margin-right: 5px;" data-toggle="modal" data-target="#registerModal">Register</button>
-            <!-- <button *ngIf="session.getUserId() !== null" class="btn btn-outline-primary" style="float:right" (click)="logout()">Logout</button> -->
+            <button *ngIf="session.getItem('userId') === null" class="btn btn-outline-primary" style="float:right; margin-right: 5px;" data-toggle="modal" data-target="#registerModal">Register</button>
+            <button *ngIf="session.getItem('userId') !== null" class="btn btn-outline-primary" style="float:right" (click)="logout()">Logout</button>
         </div>
     </div>
 </div>
