--- a/RekeningrijdersApplicatie/src/app/invoice-list/invoice-list.component.html
+++ b/RekeningrijdersApplicatie/src/app/invoice-list/invoice-list.component.html
@@ -1,5 +1,5 @@
 <div class="container shadow">
-    <h2>Invoices</h2>
+    <h2>My Invoices</h2>
 </div>
 <div class="table-container shadow">
     <table class="table table-hover">
