Multilanguage english and dutch

--- a/RekeningrijdersApplicatie/src/app/header/header.component.css
+++ b/RekeningrijdersApplicatie/src/app/header/header.component.css
@@ -11,3 +11,11 @@
     margin-top: auto;
     margin-bottom: auto;
 }
+
+.language {
+    cursor: pointer;
+}
+
+.selected {
+    font-weight: bold;
+}
