--- a/RekeningrijdersApplicatie/src/app/vehicle-list/vehicle-list.component.html
+++ b/RekeningrijdersApplicatie/src/app/vehicle-list/vehicle-list.component.html
@@ -1,20 +1,20 @@
 <div class="container shadow">
-    <h2>My Vehicles</h2>
+    <h2>{{ "myvehicles" | translate }}</h2>
 </div>
 <div class="table-container shadow">
     <table class="table table-hover">
         <thead>
             <tr>
-                <th scope="col">License Plate</th>
-                <th scope="col">Type</th>
-                <th scope="col">Manage</th> 
+                <th scope="col">{{ "licenseplate" | translate }}</th>
+                <th scope="col">{{ "type" | translate }}</th>
+                <th scope="col">{{ "manage" | translate }}</th> 
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let vehicle of vehicles">
                 <td>{{vehicle.licensePlate}}</td>
-                <td>{{vehicle.vehicleType.toString()}}</td>
-                <td><button class="btn btn-primary">Remove</button></td>
+                <td>{{ vehicle.vehicleType.toString() | translate }}</td>
+                <td><button class="btn btn-primary">{{ "remove" | translate }}</button></td>
             </tr>
         </tbody>
     </table>
