--- a/RekeningrijdersApplicatie/src/app/header/header.component.html
+++ b/RekeningrijdersApplicatie/src/app/header/header.component.html
@@ -1,14 +1,22 @@
 <div class="container shadow">
     <div class="row" style="display: flex">
         <div class="col">
-            <a href="/"><h1>InvoiceDriver</h1></a>
+            <a href="/">
+                <h1>{{ "invoicedriver" | translate }}</h1>
+            </a>
         </div>
         <div class="col header-item">
             <button id="closeLoginModal" [hidden]="true" data-toggle="modal" data-target="#loginModal"></button>
-            <button *ngIf="session.getItem('userId') === null" class="btn btn-outline-primary" style="float:right" data-toggle="modal" data-target="#loginModal">Login</button>
+            <button *ngIf="session.getItem('userId') === null" class="btn btn-outline-primary" style="float:right" data-toggle="modal"
+                data-target="#loginModal">{{ "login" | translate }}</button>
             <button id="closeRegisterModal" [hidden]="true" data-toggle="modal" data-target="#registerModal"></button>
-            <button *ngIf="session.getItem('userId') === null" class="btn btn-outline-primary" style="float:right; margin-right: 5px;" data-toggle="modal" data-target="#registerModal">Register</button>
-            <button *ngIf="session.getItem('userId') !== null" class="btn btn-outline-primary" style="float:right" (click)="logout()">Logout</button>
+            <button *ngIf="session.getItem('userId') === null" class="btn btn-outline-primary" style="float:right; margin-right: 5px;"
+                data-toggle="modal" data-target="#registerModal">{{ "register" | translate }}</button>
+            <button *ngIf="session.getItem('userId') !== null" class="btn btn-outline-primary" style="float:right" (click)="logout()">{{ "logout" | translate }}</button>
+        </div>
+        <div class="col-1 header-item">
+            <a class="language" [class.selected]="usingLang === 'en'" (click)="changeLang('en')">EN</a>
+            <a class="language" [class.selected]="usingLang === 'nl'" (click)="changeLang('nl')">NL</a>
         </div>
     </div>
 </div>
@@ -17,20 +25,20 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Login</h5>
+                <h5 class="modal-title">{{ "login" | translate }}</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <input name="username" id="logusername" type="text" class="form-control" [(ngModel)]="usercreds.username" (keyup.enter)="login(usercreds)" placeholder="Username"
-                    required autofocus>
+                <input name="username" id="logusername" type="text" class="form-control" [(ngModel)]="usercreds.username" (keyup.enter)="login(usercreds)"
+                    placeholder="{{ 'username' | translate }}" required autofocus>
                 <br/>
-                <input name="password" id="logpassword" type="password" class="form-control" [(ngModel)]="usercreds.password" (keyup.enter)="login(usercreds)" placeholder="Password"
-                    required autofocus>
+                <input name="password" id="logpassword" type="password" class="form-control" [(ngModel)]="usercreds.password" (keyup.enter)="login(usercreds)"
+                    placeholder="{{ 'password' | translate }}" required autofocus>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" (click)="login(usercreds)">Login</button>
+                <button type="button" class="btn btn-primary" (click)="login(usercreds)">{{ "login" | translate }}</button>
             </div>
         </div>
     </div>
@@ -40,23 +48,23 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Register</h5>
+                <h5 class="modal-title">{{ "register" | translate }}</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <input name="email" id="regemail" type="email" class="form-control" [(ngModel)]="registercreds.email" (keyup.enter)="register(registercreds)" placeholder="Email"
-                    required autofocus>
+                <input name="email" id="regemail" type="email" class="form-control" [(ngModel)]="registercreds.email" (keyup.enter)="register(registercreds)"
+                    placeholder="{{ 'email' | translate }}" required autofocus>
                 <br/>
-                <input name="username" id="regusername" type="text" class="form-control" [(ngModel)]="registercreds.username" (keyup.enter)="register(registercreds)" placeholder="Username"
-                    required autofocus>
+                <input name="username" id="regusername" type="text" class="form-control" [(ngModel)]="registercreds.username" (keyup.enter)="register(registercreds)"
+                    placeholder="{{ 'username' | translate }}" required autofocus>
                 <br/>
-                <input name="password" id="regpassword" type="password" class="form-control" [(ngModel)]="registercreds.password" (keyup.enter)="register(registercreds)" placeholder="Password"
-                    required autofocus>
+                <input name="password" id="regpassword" type="password" class="form-control" [(ngModel)]="registercreds.password" (keyup.enter)="register(registercreds)"
+                    placeholder="{{ 'password' | translate }}" required autofocus>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" (click)="register(registercreds)">Register</button>
+                <button type="button" class="btn btn-primary" (click)="register(registercreds)">{{ "register" | translate }}</button>
             </div>
         </div>
     </div>
