--- a/RekeningrijdersApplicatie/src/app/invoice/invoice.component.html
+++ b/RekeningrijdersApplicatie/src/app/invoice/invoice.component.html
@@ -1,5 +1,33 @@
+<div class="container shadow">
+    <h2>{{ "invoice" | translate }}</h2>
+</div>
 <div *ngIf="invoice !== null" class="container shadow">
-    <h2>Invoice: {{invoice.dateToString()}}</h2>
+    <table class="table">
+        <tbody>
+            <tr>
+                <th scope="row">{{ "date" | translate }}</th>
+                <td>{{invoice.dateToString()}}</td>
+            </tr>
+            <tr>
+                <th scope="row">{{ "totalsum" | translate }}</th>
+                <td>{{invoice.totalSumToString()}}</td>
+            </tr>
+            <tr>
+                <th scope="row">{{ "paid" | translate }}</th>
+                <td *ngIf="invoice.paid">{{ "yes" | translate }}</td>
+                <td *ngIf="!invoice.paid">{{ "no" | translate }}</td>
+            </tr>
+            <tr *ngIf="!invoice.paid">
+                <th>{{ "pay" | translate }}</th>
+                <td>
+                    <button class="btn btn-primary" style="float: right">{{ "pay" | translate }}</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<div class="container shadow">
+    <h2>{{ "movements" | translate }}</h2>
 </div>
 <div *ngIf="invoice !== null" class="container shadow">
     <table class="table table-hover">
