--- a/RekeningrijdersApplicatie/src/app/invoice/invoice.component.html
+++ b/RekeningrijdersApplicatie/src/app/invoice/invoice.component.html
@@ -33,11 +33,11 @@
     <table class="table table-hover">
         <thead>
             <tr>
-                <th scope="col">Date Start</th>
-                <th scope="col">Date End</th>
-                <th scope="col">Location Start</th>
-                <th scope="col">Location End</th>
-                <th scope="col">Vehicle</th>
+                <th scope="col">{{ "datestart" | translate }}</th>
+                <th scope="col">{{ "dateend" | translate }}</th>
+                <th scope="col">{{ "locationstart" | translate }}</th>
+                <th scope="col">{{ "locationend" | translate }}</th>
+                <th scope="col">{{ "vehicle" | translate }}</th>
             </tr>
         </thead>
         <tbody>
