--- a/RekeningrijdersApplicatie/src/app/app.component.html
+++ b/RekeningrijdersApplicatie/src/app/app.component.html
@@ -1,2 +1,2 @@
 <app-header></app-header>
-<router-outlet *ngIf="session.getItem('userId') !== null"></router-outlet>
+<router-outlet *ngIf="session.getItem('token') !== null"></router-outlet>
