--- a/RekeningrijdersApplicatie/src/app/header/header.component.html
+++ b/RekeningrijdersApplicatie/src/app/header/header.component.html
@@ -32,14 +32,36 @@
                 </button>
             </div>
             <div class="modal-body">
-                <input name="username" id="logusername" type="text" class="form-control" [(ngModel)]="usercreds.username" (keyup.enter)="login(usercreds)"
-                    placeholder="{{ 'username' | translate }}" required autofocus>
-                <br/>
-                <input name="password" id="logpassword" type="password" class="form-control" [(ngModel)]="usercreds.password" (keyup.enter)="login(usercreds)"
-                    placeholder="{{ 'password' | translate }}" required autofocus>
+                <form #loginForm="ngForm">
+                    <div class="form-group">
+                        <label for="username">{{ 'username' | translate }}</label>
+                        <input name="username" id="logusername" type="text" class="form-control" [(ngModel)]="usercreds.username" (keyup.enter)="login(usercreds)"
+                            placeholder="{{ 'username' | translate }}" required autofocus #logusername="ngModel">
+
+                        <div *ngIf="logusername.invalid && (logusername.dirty || logusername.touched)" class="alert alert-danger">
+                            <div *ngIf="logusername.errors.required">
+                                {{ 'fieldrequired' | translate }}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">{{ 'password' | translate }}</label>
+                        <input name="password" id="logpassword" type="password" class="form-control" [(ngModel)]="usercreds.password" (keyup.enter)="login(usercreds)"
+                            placeholder="{{ 'password' | translate }}" required autofocus #logpassword="ngModel">
+
+                        <div *ngIf="logpassword.invalid && (logpassword.dirty || logpassword.touched)" class="alert alert-danger">
+                            <div *ngIf="logpassword.errors.required">
+                                {{ 'fieldrequired' | translate }}
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <div *ngFor="let alert of loginAlerts" class="alert alert-danger">
+                    {{ alert | translate }}
+                </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" (click)="login(usercreds)">{{ "login" | translate }}</button>
+                <button type="button" class="btn btn-danger" (click)="login(usercreds)" [disabled]="loginForm.invalid">{{ "login" | translate }}</button>
             </div>
         </div>
     </div>
@@ -55,20 +77,79 @@
                 </button>
             </div>
             <div class="modal-body">
-                <input name="email" id="regemail" type="email" class="form-control" [(ngModel)]="registercreds.email" (keyup.enter)="register(registercreds)"
-                    placeholder="{{ 'email' | translate }}" required autofocus>
-                <br/>
-                <input name="address" id="regaddress" type="text" class="form-control" [(ngModel)]="registercreds.address" (keyup.enter)="register(registercreds)"
-                    placeholder="{{ 'address' | translate }}" required autofocus>
-                <br/>
-                <input name="username" id="regusername" type="text" class="form-control" [(ngModel)]="registercreds.username" (keyup.enter)="register(registercreds)"
-                    placeholder="{{ 'username' | translate }}" required autofocus>
-                <br/>
-                <input name="password" id="regpassword" type="password" class="form-control" [(ngModel)]="registercreds.password" (keyup.enter)="register(registercreds)"
-                    placeholder="{{ 'password' | translate }}" required autofocus>
+                <form #registerForm="ngForm">
+                    <div class="form-group">
+                        <label for="email">{{ 'email' | translate }}</label>
+                        <input name="email" id="regemail" type="email" class="form-control" [(ngModel)]="registercreds.email" placeholder="{{ 'email' | translate }}"
+                            required email autofocus #email="ngModel">
+
+                        <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
+                            <div *ngIf="email.errors.required">
+                                {{ 'fieldrequired' | translate }}
+                            </div>
+                            <div *ngIf="email.errors.email">
+                                {{ 'emailinvalid' | translate }}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="">{{ 'address' | translate }}</label>
+                        <input name="address" id="regaddress" type="text" class="form-control" [(ngModel)]="registercreds.address" placeholder="{{ 'address' | translate }}"
+                            required #address="ngModel">
+
+                        <div *ngIf="address.invalid && (address.dirty || address.touched)" class="alert alert-danger">
+                            <div *ngIf="address.errors.required">
+                                {{ 'fieldrequired' | translate }}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="">{{ 'username' | translate }}</label>
+                        <input name="username" id="regusername" type="text" class="form-control" [(ngModel)]="registercreds.username" placeholder="{{ 'username' | translate }}"
+                            required #username="ngModel">
+
+                        <div *ngIf="username.invalid && (username.dirty || username.touched)" class="alert alert-danger">
+                            <div *ngIf="username.errors.required">
+                                {{ 'fieldrequired' | translate }}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="">{{ 'password' | translate }}</label>
+                        <input name="password" id="password" type="password" class="form-control" [(ngModel)]="registercreds.password" placeholder="{{ 'password' | translate }}"
+                            required #password="ngModel">
+
+                        <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
+                            <div *ngIf="password.errors.required">
+                                {{ 'fieldrequired' | translate }}
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="">{{ 'repeatpassword' | translate }}</label>
+                        <input name="confirmPassword" id="confirmPassword" type="password" class="form-control" [(ngModel)]="registercreds.repPassword"
+                            placeholder="{{ 'repeatpassword' | translate }}" required validateEqual="password" #confirmPassword="ngModel">
+
+                        <div *ngIf="confirmPassword.invalid && (confirmPassword.dirty || confirmPassword.touched)" class="alert alert-danger">
+                            <div *ngIf="confirmPassword.errors.required">
+                                {{ 'fieldrequired' | translate }}
+                            </div>
+
+                            <div *ngIf="!confirmPassword.errors.validateEqual">
+                                {{ 'passwordnomatch' | translate }}
+                            </div>
+                        </div>
+                    </div>
+
+                </form>
+
+                <div *ngFor="let alert of registerAlerts" class="alert alert-danger">
+                    {{ alert | translate }}
+                </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" (click)="register(registercreds)">{{ "register" | translate }}</button>
+                <button type="button" class="btn btn-danger" (click)="register(registercreds)" [disabled]="registerForm.invalid">{{ "register" | translate }}</button>
             </div>
         </div>
     </div>
