--- a/RekeningrijdersApplicatie/src/assets/css/styles.css
+++ b/RekeningrijdersApplicatie/src/assets/css/styles.css
@@ -17,3 +17,13 @@ a :hover {
     border-radius: 5px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)!important;
 }
+
+.ng-valid[required], .ng-valid.required {
+    border-left: 5px solid #42A948;
+    /* green */
+}
+
+.ng-invalid:not(form) {
+    border-left: 5px solid #a94442;
+    /* red */
+}
