--- a/RekeningrijdersApplicatie/src/app/header/header.component.html
+++ b/RekeningrijdersApplicatie/src/app/header/header.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="col-2 header-item">
             <a class="language" [class.selected]="usingLang === 'pl'" (click)="changeLang('pl')">PL</a>
-            <a class="language" [class.selected]="usingLang === 'en'" (click)="changeLang('en')">EN</a>
+            <a class="language" [class.selected]="usingLang === 'en'" (click)="changeLang('en')">test</a>
             <a class="language" [class.selected]="usingLang === 'nl'" (click)="changeLang('nl')">NL</a>
         </div>
     </div>
