--- a/PolitieApplicatie/src/app/app.component.html
+++ b/PolitieApplicatie/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-header></app-header>
-<router-outlet *ngIf="session.getItem('token') !== null"></router-outlet>
+<router-outlet></router-outlet>
+
