--- a/PolitieApplicatie/src/app/header/header.component.css
+++ b/PolitieApplicatie/src/app/header/header.component.css
@@ -1,21 +1,3 @@
-.container {
-    background-color: white;
-    margin-bottom: 10px;
-}
-
-.shadow {
-    border-radius: 0 0 5px 5px;
-}
-
-.header-item {
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-.language {
-    cursor: pointer;
-}
-
-.selected {
-    font-weight: bold;
+.navbar {
+    background-color: #16283b;
 }
