--- a/PolitieApplicatie/src/app/home/home.component.html
+++ b/PolitieApplicatie/src/app/home/home.component.html
@@ -1,12 +1,25 @@
-<div *ngIf="session.getItem('token') !== null && user !== null" class="container">
-    <div class="row">
-        <div class="col-6">
-            <app-user [user]="user"></app-user>
-            <br />
-            <app-vehicle-list [vehicles]="user.vehicles"></app-vehicle-list>
-        </div>
-        <div class="col-6">
-            <app-invoice-list [invoices]="user.invoices"></app-invoice-list>
-        </div>
+<div class="main">
+    Home
+    <div class="w-50 p-2 bg-light text-dark">
+        <table>
+            <tr>
+                <td>For invoices:</td>
+                <td>
+                    <a href="/invoices">click here</a>
+                </td>
+            </tr>
+            <tr>
+                <td>For vehicles:</td>
+                <td>
+                    <a href="/vehicles">click here</a>
+                </td>
+            </tr>
+            <tr>
+                <td>For users:</td>
+                <td>
+                    <a href="/invoices">click here</a>
+                </td>
+            </tr>
+        </table>
     </div>
 </div>
