--- a/PolitieApplicatie/src/app/invoice-list/invoice-list.component.html
+++ b/PolitieApplicatie/src/app/invoice-list/invoice-list.component.html
@@ -1,20 +1,24 @@
-<div class="container shadow">
-    <h2>{{ "myinvoices" | translate }}</h2>
-</div>
-<div class="table-container shadow">
-    <table class="table table-hover">
+<div class="main">
+    Invoices
+    <form class="form-inline my-2 float-right">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+    </form>
+    <table class="table table-hover table-dark">
         <thead>
             <tr>
-                <th scope="col">{{ "date" | translate }}</th>
-                <th scope="col">{{ "totalsum" | translate }}</th>
-                <th scope="col">{{ "status" | translate }}</th>
+                <th scope="col">#</th>
+                <th scope="col">Date</th>
+                <th scope="col">Total Sum</th>
+                <th scope="col">Status</th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let invoice of invoices" class="invoice" (click)="goToInvoice(invoice)">
+            <tr *ngFor="let invoice of filteredInvoices">
+                <th scope="row">{{invoice.id}}</th>
                 <td>{{invoice.dateToString()}}</td>
                 <td>{{invoice.totalSumToString()}}</td>
-                <td>{{ invoice.status.toLowerCase() | translate }}</td>
+                <td>{{invoice.status}}</td>
             </tr>
         </tbody>
     </table>
