--- a/PolitieApplicatie/src/assets/css/styles.css
+++ b/PolitieApplicatie/src/assets/css/styles.css
@@ -1,16 +1,15 @@
 body {
-    background-color: #dc3545;
+    background-color: #1d1d1d;
+    color: white;
     /* background-image: url("../images/warschau.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed; */
 }
 
-a {
-    color: #dc3545;
-}
-
-a :hover {
-    color: #dc3545;
+.main {
+    width: 80%;
+    margin: auto;
+    margin-top: 10px;
 }
 
 .shadow {
