--- a/Rekeningadministratie_Frontend/src/assets/css/styles.css
+++ b/Rekeningadministratie_Frontend/src/assets/css/styles.css
@@ -6,6 +6,10 @@ body {
     background-attachment: fixed; */
 }
 
+a :hover {
+    cursor: pointer;
+}
+
 .main {
     width: 80%;
     margin: auto;
